--- a/index.html
+++ b/index.html
@@ -310,6 +310,7 @@
           nextEl: ".swiper-button-next",
           prevEl: ".swiper-button-prev",
         },
+        watchSlidesProgress: true,
         slidesPerView: 1,
         spaceBetween: 30,
         breakpoints: {
