--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
       <div class="hero__wrapper"> 
         <div class="container">
           <section class="hero">
-            <h1 class="title"><span>Online shopping</span>  is the future</h1> 
+            <h1 class="title js_main-title"></h1> 
        
           </section>
         </div>
