Last Eduardo changes 29.02.24

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
       <div class="policy__wrapper">
         <div class="container">
           <section class="policy">
-            <h3 class="sub-title">Policies</h3>
+            <!-- <h3 class="sub-title">Policies</h3> -->
             <ul class="policy__list">
               <li class="policy__item">
                 <div class="policy__block">
@@ -135,7 +135,7 @@
                 </div>
               
               </li>
-              <li class="policy__item">
+              <!-- <li class="policy__item">
                 <div class="policy__block">
                   <div>
                   <div class="policy__icon-box">
@@ -161,7 +161,7 @@
                   <a href="./return.html" class="policy__btn">read more</a>
                 </div>
                
-              </li>
+              </li> -->
             </ul>
           </section>
         </div>
