--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         <div class="container">
           <section class="hero">
             <h1 class="title js_main-title"></h1> 
-       
+       <p class="text text--mb js_sub-title"></p>
           </section>
         </div>
       </div>
